--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="acceuil">
                 I
                 <video autoplay muted loop>
-                    <source src="./ressources/videoAcceuil.mp4" type="video/mp4">
+                    <source src="video.mp4" type="video/mp4">
                 </video>
                 <div class="content">
                     <h1>BIENVENUE POUR UN VOYAGE A COUPER LE SOUFFLE !</h1>
